modules/panel/client/css/panel.css
/* ... */
@media (min-width: 768px) {
    .sidepanel .nav-tabs.nav-justified  > li  {
        padding: 10px 0px 10px 20px;
        width: 160px;
    }
    .sidepanel .nav-tabs.nav-justified > li {
        /*background-color: #eae5e5;*/
        border: none;
    }
    .sidepanel .nav-tabs.nav-justified > li > a {
        /*background-color: #eae5e5;*/
        border: none;
        border-bottom: 2px solid gray;
        color: #888888;
    }
    .sidepanel .nav-tabs.nav-justified > .active > a {
        /*background-color: #f6f6f6;*/
        /*border-bottom: 1px solid #f6f6f6;*/
        border-bottom: 2px solid #3F51B5;
        color: #555;
    }
}

.lectureList {
    padding-left: 0;
}


a, a:focus {
    outline: 0;
}

.maximized .panel-header-buttons {
    margin-top: -5px;
}

.maximized .panel-button {
    font-size: 11pt;
    width: 49%;
    float: left;
    height: 26pt;
    margin: 0pt 1% 5pt 0pt;
    /*box-shadow: 2px 2px 4px #999;*/
    border-radius: 5pt;
    border: 1px solid #ddd;
    display: block;
    top: 5px;
    padding: 0px 2px 0 0px;
    text-align: center;
    /*position:absolute;*/
}

.maximized .panel-button:last-child {
    margin-right: 0;
}

.maximized a.panel-button:hover {
    text-decoration: none;
    background:#b8b5d7;
    color: #333;
}
/*.maximized .panel-button.play {
    right: 10px;
}
.maximized .panel-button.goal {
    right: 70px;
}*/
.minimized .panel-button {
    font-size: 0;
    width: 20pt;
    height: 20pt;
    margin: 4pt 0 0 3pt;
    /*padding: 2pt 0 0 3pt;*/
    /*box-shadow: 2px 2px 4px #999;*/
    border-radius: 5pt;
    border: 1px solid #ddd;
    background: #f6f6f6;
    display: block;
    color: #333333;
    float: none !important;
}
.minimized .panel-button.play span {
    font-size: 10pt;
}
.minimized .play.learnmode-true {
    padding: 2pt 0 0 3pt;
}
.minimized .play.learnmode-false {
    padding: 2pt 0 0 5pt;
}
.maximized .play.learnmode-true .map-icon {
    top: 5px;
}
.maximized .play.learnmode-true {
    padding-top: 7px;
}
.maximized .play.learnmode-false {
    padding-top: 7px;
}

/** -------------------------------- CONCEPT TAB -------------------------------- **/

.concept-panel .admin-action {
    display: none;
}
.concept-panel .admin-panel .admin-action {
    display: inherit;
}

.course-list {
    /*left: -10px;*/
    padding-left: 0;
    list-style-type: none;
    position: relative;
    margin-top: 50px;
    height: 100%;
    overflow-x: hide;
}
.course-list *, .course-list .concept {
    border-color: inherit;
}

.course-list > .concept > a > .concept-line {
    top: 0px;
    min-height: 0;
}

.course-list > .concept > a {
    padding-bottom: 15px;
}

.concept-list {
    position: relative;
    list-style-type: none;
    top: 12px;
    left: 14px;
    width: 90%;
    overflow-x: hide;
    overflow-y: scroll;

}

.concept-list > .concept {
    /*height: 29pt;*/
    font-size: 14px;
    line-height: 18px;
    margin-bottom: 10px;
    color: #000;
}


.concept-panel p {
    margin-top: 10pt;
}

.panel-tab {
    vertical-align: bottom;
}

a[disabled] {
    pointer-events: none;
    /*color: #666;*/
}
a[disabled] .map-icon {
    -webkit-filter: grayscale(100%);
}

.concept-list > li {
    position: relative;
    display: inline-block;
    width: 100%;
}
.concept-list > li > a > span.glyphicon {
    z-index: 3;
    position: absolute;

}
.concept-list .flag {
    margin: 10pt;
    position: absolute;
    left: -4pt;
    top: -6pt;
}


.concept-tick, .concept-seen {
    left: 6pt;
    top: 4pt;
    position: absolute;
    z-index: 3;
}

.maximized .concept-list-nested .concept-list-nested .glyphicon {
    font-size: 70%;
}

.concept-list-nested .concept-list-nested .concept-tick, .concept-list-nested .concept-list-nested .concept-seen {
    top: 6px;
    left: 9px;
}
.concept-list-nested .concept-list-nested .flag {
    top: -6px;
    left: -3px;
}

.concept.notOnPlan > a > .concept-circle {
    background: #aaa !important;
}

.concept > a {
    position: relative;
    top: 0;
    /*left: 30pt;*/
    padding-top: 3px;
    /*padding-left: 30pt;*/
    z-index: 2;
    text-decoration: none;
    color: #000;
}


.concept-circle {
    width: 20pt;
    height: 20pt;
    display: block;
    border-radius: 10pt;
    border: 1px solid #999; 
    z-index: 2;
    position: absolute;
    top: 0;
    /*box-shadow: 1px 1px 3px #aaa;*/
}

.active > a > .concept-circle, .concept-list .concept:hover > a > .concept-circle, .hover > a > .concept-circle, .concept-list .concept:hover > a > .concept-circle  {
    border: 2px solid #444466;
}

.flag {
    display: none;
}

.goal > a > .flag {
    display: block;
    z-index:3;
}
/*
.learnmode-no .concept-list .concept > a:hover > .flag {
    display: block;
}*/

/** -------------------------------- CONCEPT LINES -------------------------------- **/

.concept-line {
    /*background: #4C4B86;*/
    width: 2px;
    z-index: 0 !important;
    /*min-height: 37px;*/
    position: absolute;
    display: block;
    left: 14px;
    top: -7px;
    height: 100%;
    display: none;

}

.concept-line span {
    display: none;
    border-left-width: 2px;
    border-left-style: solid;
    display: block;
    position: absolute;
    height: auto;
    width: 2px;
    bottom:0;
    top:0;
    left:0;
    right:0;
    margin-bottom: -1px;
}

.concept-list .concept-line span {
    display: none;
    margin-bottom: -19px;
}

.concept-list-nested .concept-list-nested .concept-line span {
    display: none;
    margin-bottom: -18px;
}

.concept-list-nested .segment .concept-line span {
    display: none;
    margin-bottom: -2px;
}


.concept > a > .concept-title {
    position: relative;
    left: 30pt;
    margin-right: 18px;
}

input.concept-title.admin {
    height: 24px;
    padding: 0 5px;
    background: #fff;
    border: 1px solid #ddd;
    width: 60%;
}
/* ... */

